--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -4,9 +4,25 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 300px;
+  width: 350px;
   height: 100vh;
   background-color: white;
   border-left: 1px solid black;
   padding: 20px;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
+}
+
+.cart.visible {
+  transform: translateX(0);
+}
+
+.cart h1 {
+  margin-bottom: 20px;
+}
+
+.cart ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
