--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,66 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
+body {
+  margin: 0;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: rgb(240, 240, 240);
+  border-bottom: 1px solid black;
+}
+
+.title {
+  font-size: 1.5rem;
+}
+
+nav {
+  ul {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    margin-right: 20px;
+  }
+}
+
+.btn-cart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  background-color: rgb(21, 179, 0);
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+
+  svg {
+    color: white;
+  }
+}
