--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -7,10 +7,11 @@
   width: 500px;
   height: 100vh;
   background-color: white;
-  border-left: 1px solid black;
+  border-left: 1px solid var(--black);
   padding: 20px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
+  color: var(--black);
 }
 
 .cart.visible {
@@ -40,13 +41,13 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--black);
   padding-bottom: 10px;
 }
 
 .cart img {
-  height: 50px;
-  width: auto;
+  height: auto;
+  width: 50px;
   margin-right: 10px;
 }
 
@@ -54,19 +55,38 @@
   margin-bottom: 5px;
 }
 
+.cart-btn-cont {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .btn-remove,
 .btn-add {
   border-radius: 20px;
   border: none;
-  padding: 5px;
   height: 25px;
   width: 25px;
   cursor: pointer;
+  background-color: white;
+  padding: 0;
+}
+
+.btn-add svg,
+.btn-remove svg {
+  color: var(--black);
+  height: 25px;
+  width: 25px;
 }
 
 span {
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.cart-price {
+  margin-left: 15px;
+  font-weight: 700;
 }
 
 .cart ul {
