--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -7,11 +7,17 @@
   width: 500px;
   height: 100vh;
   background-color: white;
-  border-left: 1px solid var(--black);
   padding: 20px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   color: var(--black);
+  border-radius: 20px 0 0 20px;
+  z-index: 11;
+  box-shadow:
+    inset 0 -0.5em 0.5em 0.5em rgb(0 0 0 / 0.1),
+    inset 0 -0.5em 0.5em rgb(0 0 0 / 0.2),
+    inset 0 0.5em 0.5em rgb(255 255 255 / 0.3),
+    0 0.5em 0.5em rgb(0 0 0 / 0.5);
 }
 
 .cart.visible {
@@ -34,7 +40,14 @@
   align-self: flex-start;
   height: 30px;
   width: 30px;
-  border-radius: 15px;
+  background-color: rgb(228, 228, 228);
+  border-radius: 20px;
+  color: var(--black);
+
+  & :hover {
+    background-color: rgb(204, 204, 204);
+    border-radius: 20px;
+  }
 }
 
 .cart-product {
@@ -93,6 +106,12 @@ span {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+
+.cart-empty {
+  margin: 20px;
+  text-align: center;
+  font-size: 1.3rem;
 }
 
 @media (max-width: 700px) {
