--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,14 @@ body {
   padding: 10px 20px;
   background-color: rgb(240, 240, 240);
   border-bottom: 1px solid var(--black);
+  z-index: 10;
+  transition: trasnform 0.3s ease;
+}
+
+.header.visible {
+  transform: translateY(0);
+  position: fixed;
+  width: 100%;
 }
 
 .title {
@@ -73,10 +81,22 @@ nav {
   padding: 5px;
   font-size: 1.2rem;
   cursor: pointer;
+  box-shadow:
+    inset 0 -0.0625em 0.0625em 0.125em rgb(0 0 0 / 0.1),
+    inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
+    inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
+    0 0.125em 0.125em rgb(0 0 0 / 0.5);
 
   svg {
     width: auto;
     height: 100%;
     color: white;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 1rem;
+    margin-right: 20px;
   }
 }
