--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -1,9 +1,18 @@
+.products-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
 .product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: white;
   padding: 15px;
   border-radius: 15px;
   text-align: center;
-  margin-bottom: 20px;
 
   img {
     height: auto;
