--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&family=Fredoka:wght@300..700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap');
+
 :root {
   --black: #383838;
 }
@@ -53,6 +55,9 @@ body {
 }
 
 .title {
+  font-family: 'Roboto Slab', serif;
+  font-weight: 600;
+  font-optical-sizing: auto;
   font-size: 1.5rem;
 }
 
@@ -111,5 +116,9 @@ nav {
   .title {
     font-size: 1rem;
     margin-right: 20px;
+  }
+
+  a {
+    font-weight: 600;
   }
 }
