--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -6,13 +6,14 @@
   right: 0;
   width: 500px;
   height: 100vh;
-  background-color: var(--black);
+  background: linear-gradient(to right, #4e4e4e, var(--black));
   padding: 20px;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   color: white;
   border-radius: 20px 0 0 20px;
   z-index: 11;
+  overflow-y: scroll;
 }
 
 .cart.visible {
