--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -7,11 +7,12 @@
   h1 {
     color: white;
     font-size: 1.5rem;
+    margin-bottom: 20px;
   }
 
   p {
     color: white;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
@@ -25,7 +26,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 10px;
 }
 
 .carousel-item {
@@ -35,6 +36,7 @@
   border-radius: 15px;
   padding: 10px;
   background-color: white;
+  margin-bottom: 10px;
 }
 
 .carousel-image {
@@ -42,17 +44,68 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 250px;
-  height: 250px;
+  width: 230px;
+  height: 230px;
   border-bottom: 1px solid rgb(224, 224, 224);
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 
   img {
-    width: 140px;
+    width: 120px;
     height: auto;
   }
 }
 
 .carousel-price {
   color: var(--black);
+}
+
+.left-button,
+.right-button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(107, 107, 107);
+  color: white;
+  padding: 5px;
+  cursor: pointer;
+}
+
+.dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.dot {
+  width: auto;
+  height: 30px;
+  color: white;
+  margin: 0;
+  border-radius: 50%;
+
+  svg {
+    width: 30px;
+    height: 30px;
+  }
+
+  &.active {
+    background-color: gray;
+  }
+}
+
+.shop-now {
+  background-color: rgb(21, 179, 0);
+  color: white;
+  padding: 8px 15px;
+  font-size: 1rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 10px;
+  box-shadow:
+    inset 0 -0.0625em 0.0625em 0.125em rgb(0 0 0 / 0.1),
+    inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
+    inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
+    0 0.125em 0.125em rgb(0 0 0 / 0.5);
 }
