--- a/src/components/Cart/cart.css
+++ b/src/components/Cart/cart.css
@@ -90,6 +90,12 @@
   color: var(--black);
   height: 25px;
   width: 25px;
+  cursor: pointer;
+  border-radius: 50%;
+
+  &:hover {
+    color: rgb(116, 116, 116);
+  }
 }
 
 span {
@@ -134,6 +140,10 @@ span {
     inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
     inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
     0 0.125em 0.125em rgb(0 0 0 / 0.5);
+
+  &:hover {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+  }
 }
 
 .cart-empty {
