--- a/src/components/Checkout/checkout.css
+++ b/src/components/Checkout/checkout.css
@@ -7,6 +7,7 @@
 
 .checkout-header {
   color: white;
+  margin-bottom: 10px;
 }
 
 .checkout-container {
@@ -24,7 +25,6 @@
   margin-bottom: 10px;
   background-color: white;
   color: var(--black);
-  border-radius: 10px;
   padding: 10px 0;
   border-bottom: 1px solid rgb(216, 216, 216);
 
@@ -54,4 +54,8 @@
     inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
     inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
     0 0.125em 0.125em rgb(0 0 0 / 0.5);
+
+  &:hover {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+  }
 }
