--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -69,6 +69,9 @@
   color: white;
   padding: 5px;
   cursor: pointer;
+  &:hover {
+    background-color: rgb(153, 153, 153);
+  }
 }
 
 .dots {
@@ -84,6 +87,7 @@
   color: white;
   margin: 0;
   border-radius: 50%;
+  cursor: pointer;
 
   svg {
     width: 30px;
@@ -91,6 +95,10 @@
   }
 
   &.active {
+    background-color: gray;
+  }
+
+  &:hover {
     background-color: gray;
   }
 }
@@ -108,4 +116,7 @@
     inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
     inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
     0 0.125em 0.125em rgb(0 0 0 / 0.5);
+  &:hover {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+  }
 }
