--- a/src/components/Shop/shop.css
+++ b/src/components/Shop/shop.css
@@ -52,5 +52,8 @@
       inset 0 -0.125em 0.0625em rgb(0 0 0 / 0.2),
       inset 0 0.1875em 0.0625em rgb(255 255 255 / 0.3),
       0 0.125em 0.125em rgb(0 0 0 / 0.5);
+    &:hover {
+      text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+    }
   }
 }
