--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,9 @@ nav {
 
   li {
     margin-right: 20px;
+    &:hover {
+      text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
+    }
   }
 }
 
@@ -104,6 +107,10 @@ nav {
     width: auto;
     height: 100%;
     color: white;
+  }
+
+  &:hover {
+    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
   }
 }
 
